calico/deploy.client.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: webapp-demo
  labels:
    app: client
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
  - name: client
    protocol: TCP
    port: 80
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: webapp-demo
  labels:
    app: client
spec:
  selector:
    matchLabels:
      app: client
  replicas: 1
  minReadySeconds: 15
  progressDeadlineSeconds: 300
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      name: client
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: notebook.local:5000/webapp:1.0.8
        ports:
        - name: client
          protocol: TCP
          containerPort: 8080
        readinessProbe:
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 15
          httpGet:
            path: /
            port: client
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 15
          httpGet:
            path: /
            port: client
