calico/policy.global.yaml
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default-deny
spec:
  namespaceSelector: projectcalico.org/name in {'webapp-demo', 'nginx-ingress', 'hashi-demo'}
  types:
  - Egress
  - Ingress
  egress:
  - action: Allow
    metadata:
      annotations:
        desc: Allow egress to kube-system for DNS
    protocol: UDP
    destination:
      selector: k8s-app == 'kube-dns'
      namespaceSelector: projectcalico.org/name == 'kube-system'
      ports:
      - 53
  - action: Allow
    metadata:
      annotations:
        desc: Allow egress to istio-system for istio-proxy
    protocol: TCP
    destination:
      selector: app == 'istiod'
      namespaceSelector: projectcalico.org/name == 'istio-system'
      ports:
      - 15012
  ingress:
  - action: Allow
    metadata:
      annotations:
        desc: Allow ingress from istio-system for prometheus
    protocol: TCP
    source:
      selector: app == 'prometheus'
      namespaceSelector: projectcalico.org/name == 'istio-system'
