calico/policy.hashi-demo.yaml
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: presentation
  namespace: hashi-demo
spec:
  selector: app == 'presentation'
  types:
  - Egress
  - Ingress
  egress:
  - action: Allow
    metadata:
      annotations:
        desc: Allow egress from presentation to application
    protocol: TCP
    destination:
      selector: app == 'application'
      namespaceSelector: projectcalico.org/name == 'hashi-demo'
      ports:
      - 5000
  ingress:
  - action: Allow
    metadata:
      annotations:
        desc: Allow ingress from nginx to presentation
    protocol: TCP
    source:
      selector: app.kubernetes.io/name == 'ingress-nginx'
      namespaceSelector: projectcalico.org/name == 'nginx-ingress'
    destination:
      ports:
      - 80

---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: application
  namespace: hashi-demo
spec:
  selector: app == 'application'
  types:
  - Egress
  - Ingress
  egress:
  - action: Allow
    metadata:
      annotations:
        desc: Allow egress from application to data
    protocol: TCP
    destination:
      selector: app == 'data'
      namespaceSelector: projectcalico.org/name == 'hashi-demo'
      ports:
      - 5432
  ingress:
  - action: Allow
    metadata:
      annotations:
        desc: Allow ingress from presentation to application
    protocol: TCP
    source:
      selector: app == 'presentation'
      namespaceSelector: projectcalico.org/name == 'hashi-demo'
    destination:
      ports:
      - 5000

---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: data
  namespace: hashi-demo
spec:
  selector: app == 'data'
  types:
  - Ingress
  ingress:
  - action: Allow
    metadata:
      annotations:
        desc: Allow ingress from application to data
    protocol: TCP
    source:
      selector: app == 'application'
      namespaceSelector: projectcalico.org/name == 'hashi-demo'
    destination:
      ports:
      - 5432
