calico/policy.nginx.yaml
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: nginx
  namespace: nginx-ingress
spec:
  selector: app.kubernetes.io/name == 'ingress-nginx'
  types:
  - Egress
  egress:
  - action: Allow
    metadata:
      annotations:
        desc: Allow egress from nginx to backend
    protocol: TCP
    destination:
      selector: app == 'webapp'
      namespaceSelector: projectcalico.org/name == 'webapp'
      ports:
      - 8080
  - action: Allow
    metadata:
      annotations:
        desc: Allow egress from nginx to rogue
    protocol: TCP
    destination:
      selector: app == 'rogue'
      namespaceSelector: projectcalico.org/name == 'webapp'
      ports:
      - 8080
  - action: Allow
    metadata:
      annotations:
        desc: Allow egress from nginx to hashi-demo presentation
    protocol: TCP
    destination:
      selector: app == 'hashi-demo' && tier == 'presentation'
      namespaceSelector: projectcalico.org/name == 'hashi-demo'
      ports:
      - 80
  - action: Allow
    metadata:
      annotations:
        desc: Allow egress from nginx to k8s api
    protocol: TCP
    destination:
      selector: zone == 'kubernetes-api'
      ports:
      - 6443
