calico/policy.webapp.yaml
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: rogue
  namespace: webapp-demo
spec:
  selector: app == 'rogue'
  types:
  - Egress
  - Ingress
  egress:
  - action: Allow
    metadata:
      annotations:
        desc: Allow egress from rogue to client
    protocol: TCP
    destination:
      selector: app == 'client'
      namespaceSelector: projectcalico.org/name == 'webapp'
      ports:
      - 8080
  ingress:
  - action: Allow
    metadata:
      annotations:
        desc: Allow ingress from nginx to rogue
    protocol: TCP
    source:
      selector: app.kubernetes.io/name == 'ingress-nginx'
      namespaceSelector: projectcalico.org/name == 'nginx-ingress'
    destination:
      ports:
      - 8080

---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: client
  namespace: webapp-demo
spec:
  selector: app == 'client'
  types:
  - Egress
  - Ingress
  egress:
  - action: Allow
    metadata:
      annotations:
        desc: Allow egress from client to backend
    protocol: TCP
    destination:
      selector: app == 'webapp'
      namespaceSelector: projectcalico.org/name == 'webapp'
      ports:
      - 8080
  ingress:
  - action: Allow
    metadata:
      annotations:
        desc: Allow ingress from rogue to client
    protocol: TCP
    source:
      selector: app == 'rogue'
      namespaceSelector: projectcalico.org/name == 'webapp'
    destination:
      ports:
      - 8080

---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: backend
  namespace: webapp-demo
spec:
  selector: app == 'webapp'
  types:
  - Ingress
  ingress:
  - action: Allow
    metadata:
      annotations:
        desc: Allow ingress from client to backend
    protocol: TCP
    source:
      selector: app == 'client'
      namespaceSelector: projectcalico.org/name == 'webapp'
    destination:
      ports:
      - 8080
  - action: Allow
    metadata:
      annotations:
        desc: Allow ingress from nginx to backend
    protocol: TCP
    source:
      selector: app.kubernetes.io/name == 'ingress-nginx'
      namespaceSelector: projectcalico.org/name == 'nginx-ingress'
    destination:
      ports:
      - 8080
